# telepathy-kindling

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  Makefile.in  kindling-connection-manager.c  kindling-connection-manager.h  kindling-connection.c  kindling-connection.c~  kindling-connection.h  kindling-connection.h~  kindling-muc-channel.c  kindling-muc-channel.h  kindling-muc-manager.c  kindling-muc-manager.h  kindling-protocol.c  kindling-protocol.c~  kindling-protocol.h  kindling-roomlist-channel.c  kindling-roomlist-channel.h  kindling-roomlist-manager.c  kindling-roomlist-manager.h  main.c
