dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(telepathy_kindling, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC






LT_INIT



PKG_CHECK_MODULES(TELEPATHY_KINDLING, json-glib-1.0
libsoup-2.4
telepathy-glib
[ ])




AC_OUTPUT([
Makefile
src/Makefile

])
